# experimental-lang

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: compiler.c  compiler.cpp  compiler.h  core.h  debug.c  debug.h  hash_table.c  hash_table.h  instruction.c  instruction.h  lexer.c  lexer.cpp  lexer.h  main.c  main.cpp  memory.c  memory.h  optimizer.h  parser.c  parser.cpp  parser.h  semant.c  semant.cpp  semant.h  typecheck.cpp  typecheck.h  vm.c  vm.h
test/lexical/: keywords.txt  numbers.txt
tests/: test1.cpp
