cmake_minimum_required(VERSION 3.10...3.12)
project(pilaf)
include_directories(src)
file(GLOB SOURCES "src/*.cpp")
add_executable(pilaf ${SOURCES})
find_package(Boost 1.60.0)


if(Boost_FOUND)
    message("Boost.test found, building tests")
    file(GLOB SOURCES "tests/*.cpp" "src/compiler.cpp" "src/lexer.cpp" "src/parser.cpp" "src/semant.cpp" "src/typecheck.cpp")
    enable_testing()
    add_executable(tests ${SOURCES})
    target_include_directories(tests PRIVATE ${Boost_INCLUDE_DIRS})
    target_include_directories(tests PRIVATE src)
    add_test(NAME tests COMMAND tests)
else()
    message("Boost.test not found, skipping test generation.")
endif()